# Book_Recommender_Using_Langchain

./: .cache_ggshield  .gitguardian.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  book_recommender.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: config.py  logger.py
docs/: API.md  ARCHITECTURE.md  DEV_EXPERIENCE.md
docs/adr/: 000-template.md  001-modular-architecture.md  002-groq-api-selection.md  003-gradio-ui-framework.md  004-local-storage-persistence.md  005-structured-logging.md  README.md
scripts/: check_config.py
src/book_recommender/: __init__.py  analytics.py  app.py  assets.js  config.py  google_books.py  logger.py  recommender.py  ui.py
tests/: test_recommender.py  test_recommender_unit.py  test_security_and_validation.py
