[project]
name = "book-recommender"
version = "0.1.0"
description = "Human-centered book recommender with Groq + LangChain + Gradio"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
fix = true

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
